<?xml version="1.0"?>
<package>
  <name>tof_mappydot_plus</name>
  <version>1.0.0</version>
  <description>I2C driver for a string of MappyDot Plus sensors.</description>
  <maintainer email="dheera@dheera.net">dheera</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
  </export>
</package>
